--- a/cfg/task/HideAndSeek_circle_partial_TP_GAN.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP_GAN.yaml
@@ -15,7 +15,7 @@ time_encoding: true
 
 action_transform: PIDrate
 
-scenario_flag: '3line' # 'empty', 'corner', 'wall', '2line', '3line'
+scenario_flag: 'wall' # 'empty', 'corner', 'wall', '2line', '3line'
 
 # exp
 num_agents: 4
@@ -24,8 +24,8 @@ num_agents: 4
 use_eval: 0
 use_partial_obs: 1
 use_random_cylinder: 1 # fixed task config
-use_DFS_validation: 0 # only use_random_cylinder = 1
 use_GAN: 1
+use_full_map_sampling: 1 # GAN samples from [-boundary, boundary]
 
 # TP net param
 history_step: 10
