--- a/cfg/task/HideAndSeek_circle_partial_TP_GAN.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP_GAN.yaml
@@ -25,7 +25,9 @@ use_eval: 0
 use_partial_obs: 1
 use_random_cylinder: 1 # fixed task config
 use_GAN: 1
-use_full_map_sampling: 1 # GAN samples from [-boundary, boundary]
+num_GAN: 1.0
+R_min: 0.5
+R_max: 0.9
 
 # TP net param
 history_step: 10
