update target policy

--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,8 +5,8 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_catch0_3_v1_3_TP_arena0_9_GAN1_unif0/08-07_22-11/wandb/run-20240807_221127-8yx6yiss/files/checkpoint_1822031872.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/random0to5_catch0_3_v1_3_TP_arena0_9/08-07_16-28/wandb/run-20240807_162823-ielzqj9c/files/checkpoint_563740672.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/random0to5_catch0_3_v1_3_arena0_9.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_GAN0_3_fpsbuffer0_7_min0_3_max0_7/08-10_22-00/wandb/run-20240810_220059-n9mfya03/files/checkpoint_2411855872.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -26,8 +26,8 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: debug
-  run_name: GAN0to5_GAN1_min0_5_max0_9
-  # run_name: random0to5_fixedinitxy
+  # run_name: GAN0to5_GAN0_3_fpsbuffer0_7_min0_3_max0_7_eval2line
+  run_name: random0to5_evalcorner
   job_type: train
   entity: chenjy
   project: RAL
@@ -40,7 +40,7 @@ wandb:
 defaults:
   # - task: HideAndSeek_square_partial
   # - task: HideAndSeek_circle_partial_woTP
-  # - task: HideAndSeek_circle_partial_TP
-  - task: HideAndSeek_circle_partial_TP_GAN
+  - task: HideAndSeek_circle_partial_TP
+  # - task: HideAndSeek_circle_partial_TP_GAN
   - algo: mappo
   - _self_
