--- a/cfg/task/HideAndSeek_circle_partial_TP_GAN.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP_GAN.yaml
@@ -25,9 +25,9 @@ use_eval: 0
 use_partial_obs: 1
 use_random_cylinder: 1 # fixed task config
 use_GAN: 1
-num_GAN: 1.0
-R_min: 0.5
-R_max: 0.9
+num_GAN: 0.7
+R_min: 0.3
+R_max: 0.7
 
 # TP net param
 history_step: 10
@@ -54,6 +54,7 @@ collision_radius: 0.07
 
 cylinder:
   size: 0.1
+  fixed_num: null # None: random num and pos, else only fixed num, random pos
   max_num: 5
   obs_max_cylinder: 5
   # max_active: 3
