--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -15,10 +15,8 @@ time_encoding: true
 
 action_transform: PIDrate
 
-# # evalution scenario
-# evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
-
-scenario_flag: 'corner' # 'empty', 'corner', '3line', 'wall', '2line'
+# use_random_cylinder = 1: invalid
+scenario_flag: 'empty' # 'empty', 'corner', '3line', 'wall', '2line'
 
 # exp
 num_agents: 4
