--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 100
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -16,15 +16,15 @@ time_encoding: true
 action_transform: PIDrate
 
 # use_random_cylinder = 1: invalid
-scenario_flag: 'empty' # 'empty', 'corner', '3line', 'wall', '2line'
+scenario_flag: '2line' # 'empty', 'corner', '3line', 'wall', '2line'
 
 # exp
 num_agents: 4
 
 # flag
-use_eval: 0
+use_eval: 1
 use_partial_obs: 1
-use_random_cylinder: 1
+use_random_cylinder: 0
 use_DFS_validation: 0 # only use_random_cylinder = 1
 
 # TP net param
@@ -53,7 +53,7 @@ collision_radius: 0.07
 cylinder:
   size: 0.1
   fixed_num: null # None: random num and pos, else only fixed num, random pos
-  max_num: 5
+  max_num: 15
   obs_max_cylinder: 5
   # max_active: 3
   # min_active: 0
