--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -26,7 +26,7 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: debug
-  run_name: GAN0to5_woTP
+  run_name: GAN0to5_TP
   # run_name: random0to5
   job_type: train
   entity: chenjy
