--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -18,7 +18,7 @@ seed: 0
 viewer:
   resolution: [960, 720]
   # up
-  eye: [-0.005, 0.0, 5.]
+  eye: [-0.005, 0.0, 20.]
   lookat: [0., 0., 1.]
   # eye: [-2.5, 0.0, 2.]
   # lookat: [0., 0.0, 0.1]
@@ -26,7 +26,7 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: debug
-  run_name: GAN0to5_TP
+  run_name: GAN0to5_woTP
   # run_name: random0to5
   job_type: train
   entity: chenjy
