--- a/cfg/task/HideAndSeek_circle_partial_TP_GAN_discrete.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP_GAN_discrete.yaml
@@ -1,4 +1,4 @@
-name: HideAndSeek_circle_partial_TP
+name: HideAndSeek_circle_partial_TP_GAN_discrete
 
 defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 100
+  num_envs: 2048
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -16,7 +16,7 @@ time_encoding: true
 action_transform: PIDrate
 
 # use_random_cylinder = 1: invalid
-scenario_flag: '2line' # 'empty', 'corner', '3line', 'wall', '2line'
+scenario_flag: 'corner' # 'empty', 'corner', 'wall', '2line', '3line'
 
 # exp
 num_agents: 4
@@ -24,8 +24,11 @@ num_agents: 4
 # flag
 use_eval: 0
 use_partial_obs: 1
-use_random_cylinder: 1
-use_DFS_validation: 0 # only use_random_cylinder = 1
+use_random_cylinder: 1 # fixed task config
+use_GAN: 1
+num_GAN: 0.7
+R_min: 0.3
+R_max: 0.9
 
 # TP net param
 history_step: 10
@@ -52,7 +55,7 @@ collision_radius: 0.07
 
 cylinder:
   size: 0.1
-  fixed_num: 5 # None: random num and pos, else only fixed num, random pos
+  fixed_num: null # None: random num and pos, else only fixed num, random pos
   max_num: 5
   obs_max_cylinder: 5
   # max_active: 3
