--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,7 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_TP_GAN0_7_R0_3to0_9/08-13_21-03/wandb/run-20240813_210320-2tgj5z22/files/checkpoint_393347072.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_TP_GAN0_7_R0_3to0_9/08-13_21-03/wandb/run-20240813_210320-2tgj5z22/files/checkpoint_2359427072.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/random0to5_woTP.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -18,21 +18,21 @@ seed: 0
 viewer:
   resolution: [960, 720]
   # up
-  eye: [-0.005, 0.0, 20.]
+  eye: [-0.005, 0.0, 5.]
   lookat: [0., 0., 1.]
   # eye: [-2.5, 0.0, 2.]
   # lookat: [0., 0.0, 0.1]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: debug
-  # run_name: particle0to5_TP_unif0_3_R0_3to0_9
+  # run_name: debug
+  run_name: random0to5_woTP_evalcorner
   # run_name: random0to5
   job_type: train
   entity: chenjy
   project: RAL
-  mode: disabled
-  # mode: online # set to 'disabled' when debugging locally, online
+  # mode: disabled
+  mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags:
@@ -40,8 +40,8 @@ wandb:
 defaults:
   # - task: HideAndSeek_square_partial
   # - task: HideAndSeek_circle_partial_woTP
-  # - task: HideAndSeek_circle_partial_TP
+  - task: HideAndSeek_circle_partial_TP
   # - task: HideAndSeek_circle_partial_TP_GAN
-  - task: HideAndSeek_circle_partial_TP_particle
+  # - task: HideAndSeek_circle_partial_TP_particle
   - algo: mappo
   - _self_
