--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,7 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_TP_GAN0_7_R0_3to0_9/08-13_21-03/wandb/run-20240813_210320-2tgj5z22/files/checkpoint_393347072.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/fixed0_TP_catch0_2/08-16_17-45/wandb/run-20240816_174527-v0bxxtgz/files/checkpoint_1061814272.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/fixed5_TP/08-15_22-26/wandb/run-20240815_222644-8jscguom/files/checkpoint_2162819072.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -17,16 +17,16 @@ seed: 0
 
 viewer:
   resolution: [960, 720]
-  # # up
-  # eye: [-0.005, 0.0, 5.]
-  # lookat: [0., 0., 1.]
-  eye: [-2.5, 0.0, 2.]
-  lookat: [0., 0.0, 0.1]
+  # up
+  eye: [-0.005, 0.0, 5.]
+  lookat: [0., 0., 1.]
+  # eye: [-2.5, 0.0, 2.]
+  # lookat: [0., 0.0, 0.1]
 
 wandb:
   group: ${oc.select:..task.name}
   # run_name: debug
-  run_name: fixed0_TP_particle_catch0_2_initeasy
+  run_name: fixed5_TP_catch0_3
   # run_name: random0to5
   job_type: train
   entity: chenjy
@@ -40,8 +40,8 @@ wandb:
 defaults:
   # - task: HideAndSeek_square_partial
   # - task: HideAndSeek_circle_partial_woTP
-  # - task: HideAndSeek_circle_partial_TP
+  - task: HideAndSeek_circle_partial_TP
   # - task: HideAndSeek_circle_partial_TP_GAN
-  - task: HideAndSeek_circle_partial_TP_particle
+  # - task: HideAndSeek_circle_partial_TP_particle
   - algo: mappo
   - _self_
