--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,7 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_TP_GAN0_7_R0_3to0_9/08-13_21-03/wandb/run-20240813_210320-2tgj5z22/files/checkpoint_393347072.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/fixed5_particle_TP_catch0_3_woeasy/08-18_23-22/wandb/run-20240818_232228-ogsrazf1/files/checkpoint_2175926272.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/fixed5_particle_TP_catch0_3/08-19_17-23/wandb/run-20240819_172310-m86cg6qd/files/checkpoint_1114243072.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -25,21 +25,21 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: debug
-  run_name: fixed5_particle_TP_catch0_3
+  run_name: debug
+  # run_name: fixed5_particle_woTP_catch0_3
   # run_name: random0to5
   job_type: train
   entity: chenjy
   project: RAL
-  # mode: disabled
-  mode: online # set to 'disabled' when debugging locally, online
+  mode: disabled
+  # mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags:
 
 defaults:
   # - task: HideAndSeek_square_partial
-  # - task: HideAndSeek_circle_partial_TP
-  - task: HideAndSeek_circle_partial_TP_particle
+  - task: HideAndSeek_circle_partial_TP
+  # - task: HideAndSeek_circle_partial_TP_particle
   - algo: mappo
   - _self_
