--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,7 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_TP_GAN0_7_R0_3to0_9/08-13_21-03/wandb/run-20240813_210320-2tgj5z22/files/checkpoint_393347072.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/fixed0_obs3_drones3_particle_TP_catch0_5/08-22_12-13/wandb/run-20240822_121350-mwu63zpz/files/checkpoint_65667072.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/fixed0_TP.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -18,10 +18,10 @@ seed: 0
 viewer:
   resolution: [960, 720]
   # up
-  eye: [-0.005, 0.0, 20.]
-  lookat: [0., 0., 1.]
-  # eye: [-2.5, 0.0, 2.]
-  # lookat: [0., 0.0, 0.1]
+  # eye: [-0.005, 0.0, 5.]
+  # lookat: [0., 0., 1.]
+  eye: [-2.5, 0.0, 2.]
+  lookat: [0., 0.0, 0.1]
 
 wandb:
   group: ${oc.select:..task.name}
@@ -37,7 +37,7 @@ wandb:
 
 defaults:
   # - task: HideAndSeek_square_partial
-  # - task: HideAndSeek_circle_partial_TP
-  - task: HideAndSeek_circle_partial_TP_particle
+  - task: HideAndSeek_circle_partial_TP
+  # - task: HideAndSeek_circle_partial_TP_particle
   - algo: mappo
   - _self_
