--- a/cfg/task/HideAndSeek_circle_partial_TP_particle.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP_particle.yaml
@@ -28,8 +28,8 @@ use_random_cylinder: 1
 use_particle_generator: 1
 use_init_easy: 0
 num_unif: 0.3
-R_min: 0.3
-R_max: 0.7
+R_min: 0.5
+R_max: 0.9
 
 # TP net param
 history_step: 10
@@ -57,8 +57,8 @@ collision_radius: 0.07
 
 cylinder:
   size: 0.1
-  fixed_num: 0 # None: random num and pos, else only fixed num, random pos
-  min_num: 5
+  fixed_num: null # None: random num and pos, else only fixed num, random pos
+  min_num: 4
   max_num: 5
   obs_max_cylinder: 3
   # max_active: 3
