--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -25,8 +25,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: debug
-  run_name: fixed0_woparticle_TP_smooth02_deploy_slowv1to1_3
+  run_name: particle_TP_smooth02_deploy_slowv1to1_3
+  # run_name: fixed0_woparticle_TP_smooth02_deploy_slowv1to1_3
   entity: chenjy
   project: RAL
   # mode: disabled
@@ -37,7 +37,7 @@ wandb:
 
 defaults:
   # - task: HideAndSeek_square_partial
-  - task: HideAndSeek_circle_partial_TP
-  # - task: HideAndSeek_circle_partial_TP_particle
+  # - task: HideAndSeek_circle_partial_TP
+  - task: HideAndSeek_circle_partial_TP_particle
   - algo: mappo
   - _self_
