--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,7 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_TP_GAN0_7_R0_3to0_9/08-13_21-03/wandb/run-20240813_210320-2tgj5z22/files/checkpoint_393347072.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/fixed0_woparticle_TP_vprey1to1_3_smooth02_deploy/08-27_14-39/wandb/run-20240827_143958-mqdu14rr/files/checkpoint_852099072.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/particle_TP_v1_3_largespeedpenalty_smooth0/08-27_21-51/wandb/run-20240827_215154-ljs9eo5o/files/checkpoint_1979318272.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -25,7 +25,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: particle_TP
+  run_name: particle_TP_v1_3_smooth0
   # run_name: fixed0_woparticle_TP_smooth02_deploy_slowv1to1_3
   entity: chenjy
   project: RAL
