--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,7 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_TP_GAN0_7_R0_3to0_9/08-13_21-03/wandb/run-20240813_210320-2tgj5z22/files/checkpoint_393347072.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/particle_TP_v1_3_largespeedpenalty_smooth0/08-27_21-51/wandb/run-20240827_215154-ljs9eo5o/files/checkpoint_1979318272.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/particle_TP_v1_3_smooth0_R05to09/08-28_20-44/wandb/run-20240828_204426-uz6aa7ko/files/checkpoint_734134272.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -25,8 +25,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: particle_TP_v1_3_smooth0_R05to09
-  # run_name: fixed0_woparticle_TP_smooth02_deploy_slowv1to1_3
+  # run_name: eval
+  run_name: fixed5_particle_TP_unif03_R05to09_firstinitbuffer
   entity: chenjy
   project: RAL
   # mode: disabled
