--- a/cfg/task/HideAndSeek_circle_partial_TP_particle.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP_particle.yaml
@@ -28,7 +28,8 @@ use_random_cylinder: 1
 use_particle_generator: 1
 use_init_easy: 0
 ratio_unif: 0.3
-R_min: 0.5
+success_threshold: 0.8 # success > 0.8, only use unif
+R_min: 0.3
 R_max: 0.9
 
 # TP net param
