--- a/cfg/task/HideAndSeek_circle_partial_TP_particle.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP_particle.yaml
@@ -27,10 +27,11 @@ use_partial_obs: 1
 use_random_cylinder: 1
 use_particle_generator: 1
 use_init_easy: 0
-ratio_unif: 0.3
-success_threshold: 1.0 # success > 0.8, only use unif
+ratio_unif: 0.7
+eval_iter: 3
+success_threshold: 0.9 # success > 0.9, only use unif
 R_min: 0.3
-R_max: 0.9
+R_max: 0.7
 
 # TP net param
 history_step: 10
