--- a/cfg/task/HideAndSeek_circle_partial_TP_particle.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP_particle.yaml
@@ -27,11 +27,11 @@ use_partial_obs: 1
 use_random_cylinder: 1
 use_particle_generator: 1
 use_init_easy: 0
-ratio_unif: 0.3
+ratio_unif: 0.1
 eval_iter: 3
-success_threshold: 1.0 # success > 0.9, only use unif
-expand_cylinders: 1
-expand_step: 0.05
+success_threshold: 0.8 # success > 0.8, only use unif
+expand_cylinders: 0
+expand_step: 0.1
 R_min: 0.5
 R_max: 0.9
 
@@ -61,7 +61,7 @@ collision_radius: 0.07
 
 cylinder:
   size: 0.1
-  fixed_num: 5 # None: random num and pos, else only fixed num, random pos
-  min_num: 5
+  fixed_num: null # None: random num and pos, else only fixed num, random pos
+  min_num: 4
   max_num: 5
   obs_max_cylinder: 3
