--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 100
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -16,13 +16,13 @@ time_encoding: true
 action_transform: PIDrate
 
 # use_random_cylinder = 1: invalid
-scenario_flag: 'wall' # 'corner', 'wall', '2line', '3line'
+scenario_flag: 'random' # 'random', 'wall', '2line', '3line'
 
 # exp
 num_agents: 3
 
 # flag
-use_eval: 0
+use_eval: 1
 use_partial_obs: 1
 use_random_cylinder: 1
 
