--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 100
+  num_envs: 2048
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -22,7 +22,7 @@ scenario_flag: 'random' # 'random', 'wall', '2line', '3line'
 num_agents: 3
 
 # flag
-use_eval: 1
+use_eval: 0
 use_partial_obs: 1
 use_random_cylinder: 1
 
@@ -52,8 +52,8 @@ collision_radius: 0.07
 
 cylinder:
   size: 0.1
-  fixed_num: 5 # None: random num and pos, else only fixed num, random pos
-  min_num: 5
+  fixed_num: null # None: random num and pos, else only fixed num, random pos
+  min_num: 4
   max_num: 5
   obs_max_cylinder: 3
   # max_active: 3
