--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,8 +6,8 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_TP_GAN0_7_R0_3to0_9/08-13_21-03/wandb/run-20240813_210320-2tgj5z22/files/checkpoint_393347072.pt
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/random4to5.pt
-# model_dir: null
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/debug_TP_epoch5/09-06_12-13/wandb/run-20240906_121303-cbj7tnup/files/checkpoint_196739072.pt
+model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -25,8 +25,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: random
-  # run_name: random4to5_particle_TP_step0_1_stop0_8_unif05
+  run_name: random4to5_particle_TP_unif03_stop08
   entity: chenjy
   project: RAL
   # mode: disabled
@@ -37,7 +36,7 @@ wandb:
 
 defaults:
   # - task: HideAndSeek_square_partial
-  - task: HideAndSeek_circle_partial_TP
-  # - task: HideAndSeek_circle_partial_TP_particle
+  # - task: HideAndSeek_circle_partial_TP
+  - task: HideAndSeek_circle_partial_TP_particle
   - algo: mappo
   - _self_
