--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -23,8 +23,9 @@ num_agents: 3
 
 # flag
 use_eval: 0
+use_deployment: 0
 use_partial_obs: 1
-use_random_cylinder: 0
+use_random_cylinder: 1
 
 # TP net param
 history_step: 10
@@ -42,7 +43,7 @@ catch_reward_coef: 20.0
 detect_reward_coef: 0.0
 collision_coef: 100.0
 speed_coef: 10.0
-smoothness_coef: 0.5
+smoothness_coef: 0.0
 
 # env param
 catch_radius: 0.3
