--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,8 +6,8 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_TP_GAN0_7_R0_3to0_9/08-13_21-03/wandb/run-20240813_210320-2tgj5z22/files/checkpoint_393347072.pt
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/ours_best.pt
-# model_dir: null
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/ours_best.pt
+model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
@@ -25,7 +25,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: fixed5_deployment_ctbr0_2pi_smoothcoef0_5
+  run_name: random_ctbr1_smoothlr00001
   # run_name: fixed5_ctbr0_2pi
   entity: chenjy
   project: RAL
