--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -25,7 +25,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: narrow_gap
+  run_name: narrow_gap_seed2
   entity: chenjy
   project: RAL
   # mode: disabled
