--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -16,7 +16,7 @@ time_encoding: true
 action_transform: PIDrate
 
 # use_random_cylinder = 1: invalid
-scenario_flag: 'random' # 'empty', 'random', 'wall', 'narrow_gap', '3walls'
+scenario_flag: 'narrow_gap' # 'empty', '2walls', 'narrow_gap', 'random', '3walls'
 
 # exp
 num_agents: 3
@@ -43,8 +43,8 @@ catch_reward_coef: 20.0
 detect_reward_coef: 0.0
 collision_coef: 100.0
 speed_coef: 10.0
-smoothness_coef: 0.5
-smooth_lr: 0.0
+init_smoothness_coef: 0.0
+smooth_lr: 0.0005
 
 # env param
 catch_radius: 0.3
@@ -54,8 +54,8 @@ collision_radius: 0.07
 
 cylinder:
   size: 0.1
-  fixed_num: 5 # None: random num and pos, else only fixed num, random pos
-  min_num: 5
+  fixed_num: null # None: random num and pos, else only fixed num, random pos
+  min_num: 4
   max_num: 5
   obs_max_cylinder: 3
   # max_active: 3
