--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,7 +5,7 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/GAN0to5_TP_GAN0_7_R0_3to0_9/08-13_21-03/wandb/run-20240813_210320-2tgj5z22/files/checkpoint_393347072.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/random4to5_smooth0_lr00001_load_ctbr0_2/09-12_10-28/wandb/run-20240912_102822-2lq992zw/files/checkpoint_2805071872.pt
 model_dir: /home/jiayu/OmniDrones/scripts/outputs/ours_best.pt
 # model_dir: null
 
@@ -25,8 +25,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: fixed5_deployment_ctbr0_2pi_smoothcoef0_5
-  # run_name: fixed5_ctbr0_2pi
+  # run_name: random4to5_smooth1_20125_lr00001_load_ctbr0_2_load
+  run_name: best_random4to5_smoothlr00005_load
   entity: chenjy
   project: RAL
   # mode: disabled
