--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -43,8 +43,9 @@ catch_reward_coef: 20.0
 detect_reward_coef: 0.0
 collision_coef: 100.0
 speed_coef: 10.0
-init_smoothness_coef: 0.0
-smooth_lr: 0.0005
+init_smoothness_coef: 15.0
+smooth_lr: 0.001
+max_smoothness_coef: 15.0
 
 # env param
 catch_radius: 0.3
