--- a/cfg/task/HideAndSeek_circle_partial_TP.yaml
+++ b/cfg/task/HideAndSeek_circle_partial_TP.yaml
@@ -16,7 +16,7 @@ time_encoding: true
 action_transform: PIDrate
 
 # use_random_cylinder = 1: invalid
-scenario_flag: 'narrow_gap' # 'empty', '2walls', 'narrow_gap', 'random', '3walls'
+scenario_flag: 'wall' # 'empty', 'wall', 'narrow_gap', 'random', 'passage'
 
 # exp
 num_agents: 3
@@ -43,9 +43,9 @@ catch_reward_coef: 20.0
 detect_reward_coef: 0.0
 collision_coef: 100.0
 speed_coef: 10.0
-init_smoothness_coef: 15.0
-smooth_lr: 0.001
-max_smoothness_coef: 15.0
+init_smoothness_coef: 0.0
+smooth_lr: 0.0002
+max_smoothness_coef: 10.0
 
 # env param
 catch_radius: 0.3
