--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,7 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/ours_deploy.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/ours_best.pt
+# model_dir: /home/zanghongzhi/isaac_ws/OmniDrones/scripts/outputs/ours_best.pt
 model_dir: null
 
 total_frames: 10000_000_000 #1000_000_000
@@ -26,7 +26,7 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: random4to5_smooth1_20125_lr00001_load_ctbr0_2_load
-  run_name: random4to5_true_version
+  run_name: random4to5_true_version_smoothlr00001
   entity: chenjy
   project: RAL
   # mode: disabled
