--- a/cfg/task/HideAndSeek_envgen.yaml
+++ b/cfg/task/HideAndSeek_envgen.yaml
@@ -1,4 +1,4 @@
-name: HideAndSeek_circle_partial_TP
+name: HideAndSeek_envgen
 
 defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
@@ -16,7 +16,7 @@ time_encoding: true
 action_transform: PIDrate
 
 # use_random_cylinder = 1: invalid
-scenario_flag: 'wall' # 'empty', 'wall', 'narrow_gap', 'random', 'passage'
+scenario_flag: 'random' # 'random', 'wall', '6cylinders', '3line'
 
 # exp
 num_agents: 3
@@ -25,7 +25,15 @@ num_agents: 3
 use_eval: 0
 use_partial_obs: 1
 use_random_cylinder: 1
-use_deployment: 0
+use_particle_generator: 1
+use_init_easy: 0
+ratio_unif: 0.3
+eval_iter: 3
+success_threshold: 1.0 # success > 0.8, only use unif
+expand_cylinders: 0
+expand_step: 0.1
+R_min: 0.5
+R_max: 0.9
 
 # TP net param
 history_step: 10
@@ -43,9 +51,7 @@ catch_reward_coef: 20.0
 detect_reward_coef: 0.0
 collision_coef: 100.0
 speed_coef: 10.0
-init_smoothness_coef: 0.0
-smooth_lr: 0.0
-max_smoothness_coef: 5.0
+smoothness_coef: 0.0
 
 # env param
 catch_radius: 0.3
