--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,8 +5,6 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/true_version_final.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/ours_best.pt
 model_dir: null
 
 total_frames: 10000_000_000 #1000_000_000
@@ -25,18 +23,17 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: random4to5
+  run_name: debug
   entity: chenjy
   project: RAL
-  # mode: disabled
-  mode: online # set to 'disabled' when debugging locally, online
+  mode: disabled
+  # mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags:
 
 defaults:
-  # - task: HideAndSeek_square_partial
-  # - task: HideAndSeek_circle_partial_TP
-  - task: HideAndSeek_circle_partial_TP_particle
+  - task: HideAndSeek
+  # - task: HideAndSeek_envgen
   - algo: mappo
   - _self_
