--- a/cfg/task/HideAndSeek.yaml
+++ b/cfg/task/HideAndSeek.yaml
@@ -4,87 +4,58 @@ defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
   - /base/env_base@_here_
   - /base/sim_base@_here_
-  - /base/randomization_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 100
   max_episode_length: 800
 
 drone_model: Crazyflie
 force_sensor: false
 time_encoding: true
 
-# reward_effort_weight: 0.1
-# reward_action_smoothness_weight: 0.0
-# reward_motion_smoothness_weight: 0.0
-# reward_distance_scale: 1.2
+action_transform: PIDrate
 
-# flatten_obs: true
-# flatten_state: true
-
-action_transform: rate
+# use_random_cylinder = 1: invalid
+scenario_flag: 'wall' # 'empty', 'wall', 'narrow_gap', 'random', 'passage'
 
 # exp
 num_agents: 3
-num_obstacles: 1 # number of moving obstacles
-obstacle_size: 0.05
-detect_range: 0.8
 
-size_min: 1.0
-size_max: 1.0
+# flag
+use_eval: 0
+use_partial_obs: 1
+use_random_cylinder: 1
+use_deployment: 0
+
+# TP net param
+history_step: 10
+future_predcition_step: 5
+window_step: 1
+use_obstacles: 0
+
+arena_size: 0.9
+max_height: 1.2
 v_drone: 1.0
-v_low: 1.3
-v_high: 1.3
-v_obstacle_min: 1.0
-v_obstacle_max: 1.0
-obstacle_control_fre: 20
+v_prey: 1.3
 
-fixed_config: False # if True, only eval max_config
-use_collision: 1
-use_speed_penalty: 1
-catch_radius: 0.5
-collision_radius: 0.01
-use_dynamic: False
+dist_reward_coef: 1.0
+catch_reward_coef: 20.0
+detect_reward_coef: 0.0
+collision_coef: 100.0
+speed_coef: 10.0
+init_smoothness_coef: 0.0
+smooth_lr: 0.0
+max_smoothness_coef: 5.0
+
+# env param
+catch_radius: 0.3
+drone_detect_radius: 100.0
+target_detect_radius: 100.0
+collision_radius: 0.07
 
 cylinder:
-  num: 5
-  cyl0:
-    translation:
-      x: 0.
-      y: 0.
-      z: 0.
-    axis: 'Z'
-    radius: 0.2
-    height: 3.0
-  cyl1:
-    translation: 
-      x: -0.7
-      y: 0.7
-      z: 0.
-    axis: 'Z'
-    radius: 0.1
-    height: 2.0
-  cyl2:
-    translation: 
-      x: 0.7
-      y: 0.7
-      z: 0.
-    axis: 'Z'
-    radius: 0.1
-    height: 2.0
-  cyl3:
-    translation: 
-      x: 0.7
-      y: -0.7
-      z: 0.
-    axis: 'Z'
-    radius: 0.1
-    height: 2.0
-  cyl4:
-    translation: 
-      x: -0.7
-      y: -0.7
-      z: 0.
-    axis: 'Z'
-    radius: 0.1
-    height: 2.0
+  size: 0.1
+  fixed_num: null # None: random num and pos, else only fixed num, random pos
+  min_num: 4
+  max_num: 5
+  obs_max_cylinder: 3
